#VERSION 0.7.9#

*  Peak_Dispatcher > added method getAcceptedGlobals()

*  autoload.php > added application custom loading class. 
                  Classes names mimic the directory structure that Peak use but under your application folder.
                  Ex: class Application_Models_User    = file: application/yourapp/models/user.php,
                      class Application_Libs_Tools_Xyz = file: application/yourapp/libs/tools/xyz.php,...

#VERSION 0.7.8# 

*  Peak_Application > fixed modules class load of method run()

*  Added Zend_Db to the framework

*  Peak_Bootstrap > added method getEnvironment() and support 'APPLICATION_ENV' inside from .htaccess

*  added Peak_core_Codegen class > generate application code files

*  Peak_core > Introduce core extensions objects primarily to move methods not used inside the application running process 
               and by the way, ligthen Peak_Core file. Removed/moved methods getLang(), getConfigs(), checkConfigs() 
               into extensions , and added method ext() to access to them. Extensions objects are stored in $extensions var.

*  Peak_Core > added method getPaths

*  autoload.php > added 'Controller' suffix support for controllers files and 
   fixed Peak_Application run() method and Peak_Controller initController() method accordly
   Controller files and classes names look likes 'foobarController.php'

*  Added Peak_Dispatcher

*  Peak_View > fix problem with __call(). Methods 'return' value/boolean was missing

*  Peak_Render > added compression to caching

*  Peak_Render > added methods : isCachedBlock(), getCacheBlock(), cacheBlockEnd().
   Those new functions help to cache a block of text/code inside views

#VERSION 0.7.7#

*  Peak_Render > added methods : genCacheId() and getCacheIdFile().
   enableCache() and disableCache() can be used inside controller and bootstrap.
   isCached() can be used inside controller.

*  Peak_Render > Added scripts views outputing cache.