@@ -1,5 +1,8 @@
 #VERSION 0.7.9#
 
+*  Peak_View_Render_Partials > fix render() to allow inclusion of partials scripts inside view 
+                               without specifying the whole path
+
 *  Peak_Dispatcher > added method getAcceptedGlobals()
 
 *  autoload.php > added application custom loading class. 
